--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Blog App</title>
+    <title>ConnectSphere</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
